add UI to rps game, refactor console.logs to DOM

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
+
 </head>
+
 <body>
-    <script src="external.js"></script>
+    <main>
+        <header class="header-box">
+            <h1 class="header">QUEST: Rock Paper Scissors</h1>
+        </header>
+
+
+        <button id="rps" type="button">Rock<img src="images/rock.png" alt="rock"></button>
+        <button id="rps" type="button">Paper<img src="images/paper.png" alt="paper"></button>
+        <button id="rps" type="button">Scissors<img src="images/scissors.png"></button>
+
+        <div class="results"></div>
+        <div class="score"></div>
+
+        <button id="restart">Restart</button>
+    </main>
 </body>
+<footer>
+    <script src="external.js"></script>
+</footer>
+
 </html>
